test/analyze/type_check/match_test/basic.exp
Error: Expected type `Unit` but found `(Int, String)`
test/analyze/type_check/match_test/basic.myte:6:5-11
 6 |     ((y, z): Unit);
   |      ^^^^^^

Error: Expected type `Unit` but found `(Int, String)`
test/analyze/type_check/match_test/basic.myte:13:5-11
 13 |     ((y, z): Unit);
    |      ^^^^^^

Error: Expected type `(Int, String)` but found `(a, b, c)`
test/analyze/type_check/match_test/basic.myte:20:14-23
 20 |   if (x match (y, _, _)) {
    |               ^^^^^^^^^

Error: Expected type `(Int, String)` but found `(Int, Bool)`
test/analyze/type_check/match_test/basic.myte:25:24-33
 25 |   if ((1, "test") match (1, true)) {}
    |                         ^^^^^^^^^

Error: Expected type `Bool` but found `String`
test/analyze/type_check/match_test/basic.myte:32:26
 32 |   if (x match (y, z) when z) {}
    |                           ^