test/analyze/type_check/match_test/basic.myte
module test

fun testDestructuring(x: (Int, String)) {
  if (x match (y, z)) {
    // Intentional error to print type
    ((y, z): Unit);
    (y: Int);
    (z: String);
  }

  while (x match (y, z)) {
    // Intentional error to print type
    ((y, z): Unit);
    (y: Int);
    (z: String);
  }
}

fun testPatternMachesExpression(x: (Int, String)) {
  if (x match (y, _, _)) {
    // Does not error
    (y: Unit);
  }

  if ((1, "test") match (1, true)) {}
}

fun testGuardIsBoolean(x: (Int, String)) {
  // Success
  if (x match (y, z) when y == 1) {}
  // Failure
  if (x match (y, z) when z) {}
}

fun main() {}